# Vectoriz.ar

./: .gitignore  PROJECT_CONTEXT.md  package-lock.json  package.json  svelte.config.js  vecto_pro_ui.html  vite.config.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: file_ops.rs  mod.rs  vectorize.rs
src-tauri/src/engine/: centerline.rs  contour.rs  mod.rs  types.rs
src-tauri/src/image/: binarize.rs  load.rs  mod.rs
src/lib/components/: ActionBar.svelte  BatchPanel.svelte  ControlPanel.svelte  DropZone.svelte  PresetSelector.svelte  SliderControl.svelte  SplitPreview.svelte
src/lib/stores/: batchStore.svelte.ts  imageStore.svelte.ts  uiStore.svelte.ts  vectorStore.svelte.ts
src/lib/types/: image.ts  presets.ts  vectorization.ts
src/routes/: +layout.svelte  +page.svelte
