[package]
name = "vectoriz-ar"
version = "0.1.0"
description = "Vectoriz.ar - Desktop Image Vectorization"
authors = ["ignacioFinochietti"]
edition = "2021"

[lib]
name = "vectoriz_ar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "image-ico"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
imageproc = "0.25"
vtracer = "0.6"
base64 = "0.22"
rayon = "1"
